fixed image overlap

--- a/src/app/components/home/Sharadamba.module.css
+++ b/src/app/components/home/Sharadamba.module.css
@@ -22,7 +22,7 @@
 }
 .sharadamba__column img {
   width: 100%;
-  height: auto;
+  height: 100%;
   object-fit: cover;
 }
 
